Corrigiendo curso de vagrant

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant </li>
-         <li> Docker: Creando containers sin dolor de cabeza </li>
+         <li> Vagrant: Gerenciando maquinas virtuales </li>
+         <li> El curso Docker: Creando containers sin dolor de cabeza </li>
          <li> Ansible </li>
          <li> Integración Continua: Madurez y Productividad en el desarrollo de software </li>
      </ul>
