--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <li> El curso Docker: Creando containers sin dolor de cabeza </li>
           <li> Ansible </li>
          <li> Integración Continua: Madurez y Productividad en el desarrollo de software </li>
-         <li> Kubernatee </li>
+         <li> Kubernates: Introduccion a la orquestacion de containers </li>
      </ul>
 </body>
 </html>
