--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <ul>
          <li> Vagrant: Gerenciando maquinas virtuales</li>
          <li> El curso Docker: Creando containers sin dolor de cabeza </li>
-          <li> Ansible </li>
+          <li> Ansible: Su infraestructura como código </li>
          <li> Integración Continua: Madurez y Productividad en el desarrollo de software </li>
          <li> Kubernates: Introduccion a la orquestacion de containers </li>
      </ul>
